--- a/src/app/pages/errata/errata.scss
+++ b/src/app/pages/errata/errata.scss
@@ -304,7 +304,7 @@ $fill-size: $node-size * 0.6;
             display: none;
 
             + .proxy {
-                background: url('/images/components/unchecked-radio.png') left center no-repeat;
+                background: url('/images/components/unchecked-radio.svg') left center no-repeat;
                 padding-right: 1.5em;
             }
 
