Fix blog display on Firefox

--- a/src/app/pages/blog/article/article.scss
+++ b/src/app/pages/blog/article/article.scss
@@ -90,6 +90,7 @@
 
         .body {
             column-width: 57em;
+            height: 11rem;
             max-height: 11rem;
             width: auto;
 
