Calculator social media buttons
Also put them on the Give confirmation page

--- a/src/app/components/calculator/calculator.html
+++ b/src/app/components/calculator/calculator.html
@@ -49,11 +49,7 @@
                 <div class="text">
                     Spread the word and join the textbook revolution
                 </div>
-                <div class="buttons">
-                    <button class="facebook btn">Facebook</button>
-                    <button class="twitter btn">Twitter</button>
-                    <button class="linkedin btn">LinkedIn</button>
-                </div>
+                <share-buttons></share-buttons>
             </div>
         </div>
     </if>
