Add calculus book to math banner

--- a/src/app/pages/home/banners/banner.html
+++ b/src/app/pages/home/banners/banner.html
@@ -3,6 +3,7 @@
     <div class="container">
         <div each="feature in model.features" class="{`${feature} feature fly${model.fly}`}"></div>
         <div class="{`book fly${model.fly}`}"></div>
+        <div class="{`second-book fly${model.fly}`}"></div>
         <div class="student" key="student"></div>
         <div class="{`square-1 fly${model.fly}`}"></div>
         <div class="{`square-2 fly${model.fly}`}"></div>
