Fix tooltip text, still needs release notes link

--- a/src/app/pages/errata/errata.html
+++ b/src/app/pages/errata/errata.html
@@ -5,7 +5,7 @@
             <div class="instructions">{model.instructions}</div>
             <div class="with-tooltip">
                 {model.moreAbout}
-                <div class="tooltip">{model.tooltipText}</div>
+                <div class="tooltip" data-html="tooltipText" skip="true"></div>
             </div>
         </div>
     </div>
