Fix wording on form for Error Details

--- a/src/app/pages/errata/form/form.html
+++ b/src/app/pages/errata/form/form.html
@@ -39,10 +39,10 @@
         <div class="question">Where did you find this error?</div>
         <input type="text" name="location" placeholder="Page number, url, etc."
          value="{model.location}" />
-        <div class="question">Tell us in detail about the issue.</div>
+        <div class="question">Tell us in detail about the error and your suggestion.</div>
         <div class="subnote">
             Please limit to one error per submission and include a suggested
-            resolution, if possible. If you have several to report, please
+            resolution if possible. If you have several to report, please
             contact us at <a mailto="errata@openstax.org">errata@openstax.org</a>.
         </div>
         <span class="invalid-message">{model.validationMessage('source')}</span>
