Fix status bar color and labels

--- a/src/app/pages/errata/errata.html
+++ b/src/app/pages/errata/errata.html
@@ -68,7 +68,7 @@
                         <div class="event">Reviewed</div>
                     </div>
                     <div class="label">
-                        <div class="event">{model.detail.resolution || 'Corrected'}</div>
+                        <div class="event">{model.detail.barStatus}</div>
                     </div>
                 </div>
                 <div class="progress-bar">
