--- a/src/app/pages/errata/errata.html
+++ b/src/app/pages/errata/errata.html
@@ -59,7 +59,7 @@
             </tbody>
         </table>
         <div class="detail" if="model.mode === 'detail'">
-            <div class="body-block" if="model.detail">
+            <div class="progress-bar-container body-block" if="model.detail">
                 <div class="progress-bar-labels">
                     <div class="label">
                         <div class="event">In Review</div>
