--- a/src/app/pages/errata/errata.scss
+++ b/src/app/pages/errata/errata.scss
@@ -10,7 +10,6 @@
 $page-background: #fbfbfb;
 $label-1: #575958;
 $label-2: #999;
-$label-4: #5f6163;
 $table-border: #dcdcdc;
 $table-dark-row: #f6f6f6;
 $node-gray: #efefef;
@@ -103,11 +102,20 @@ $fill-size: $node-size * 0.6;
 
         .filter-buttons {
             margin: 0;
+
+            @include tablet {
+                margin: 0 1.5rem;
+            }
+
+            @include phone {
+                margin: 0 1.5rem;
+            }
         }
     }
 
     .body-block {
         padding: 0 4rem;
+        width: 100%;
 
         @include phone {
             padding: 0 1rem;
@@ -229,6 +237,10 @@ $fill-size: $node-size * 0.6;
         }
     }
 
+    .progress-bar-container {
+        background-color: color(neutral-lightest);
+    }
+
     .progress-bar-labels {
         display: flex;
         justify-content: space-between;
@@ -252,7 +264,6 @@ $fill-size: $node-size * 0.6;
         justify-content: center;
         margin-top: 1.9rem;
         position: relative;
-        width: 100%;
 
         .progress-bar-layer {
             align-content: center;
@@ -306,110 +317,12 @@ $fill-size: $node-size * 0.6;
     .info {
         color: $label-1;
         display: table;
-        margin-top: 1.9rem;
-        width: 100%;
+        padding-bottom: 4rem;
+        padding-top: 2rem;
 
         @include phone {
             display: block;
         }
 
-    }
-
-    .form-container {
-        background-color: color(neutral-lightest);
-        color: $label-4;
-        padding: 2rem 9rem;
-
-        .question {
-            font-size: 1.8rem;
-            font-weight: bold;
-            margin-bottom: 1rem;
-            margin-top: 3rem;
-        }
-
-        label {
-            color: $label-4;
-            display: block;
-            line-height: normal;
-            padding-left: 2rem;
-            text-indent: -2rem;
-        }
-
-        .radio-columns {
-            font-size: 1.6rem;
-
-            @include desktop {
-                column-count: 2;
-                column-gap: 3rem;
-            }
-
-            [type="text"] {
-                width: auto;
-            }
-
-        }
-
-        [type="radio"] {
-            display: none;
-
-            + .proxy {
-                background: url('/images/components/unchecked-radio.svg') left center no-repeat;
-                padding-right: 1.5em;
-            }
-
-            &:checked + .proxy {
-                background-image: url('/images/components/checked-radio.png');
-            }
-        }
-
-        .subnote {
-            font-size: 1.2rem;
-            font-style: italic;
-            line-height: normal;
-            margin-bottom: 1rem;
-            width: 75%;
-        }
-
-        .file-button {
-            display: flex;
-            justify-content: flex-start;
-        }
-
-        .btn {
-            background-color: $table-dark-row;
-            border: 0;
-            color: $label-4;
-            display: flex;
-            font-size: 1.6rem;
-            margin: 0 0 3rem;
-            padding: 1rem 4rem;
-            text-indent: inherit;
-            text-transform: none;
-        }
-
-        [type="submit"].btn {
-            background-color: color(orange);
-            color: color(neutral-lightest);
-            float: none;
-            text-transform: uppercase;
-        }
-
-        .helpbox {
-            background-color: lighten(color(cyan), 47%);
-            border: thin solid darken(color(cyan), 20%);
-            color: darken(color(cyan), 22%);
-            margin-top: 1rem;
-            max-height: 6rem;
-            overflow: hidden;
-            padding: 1rem;
-            transition: all 0.13s linear;
-
-            &.not-visible {
-                max-height: 0;
-                opacity: 0;
-                padding: 0 1rem;
-                visibility: hidden;
-            }
-        }
     }
 }
