--- a/src/app/pages/errata/errata.html
+++ b/src/app/pages/errata/errata.html
@@ -5,7 +5,22 @@
             <div class="instructions">{model.instructions}</div>
             <div class="with-tooltip">
                 {model.moreAbout}
-                <div class="tooltip" data-html="tooltipText" skip="true"></div>
+                <div class="tooltip">
+                    <p>Textbook corrections are incorporated into the webview version regularly.
+                      Instructor and student resources, such as test banks and student solution manuals, are
+                      also updated regularly online.  New PDF versions of OpenStax textbooks that reflect
+                      errata are updated, with release notes, in June.</p>
+                      <p if="model.releaseNotes">
+                          <a href="{model.releaseNotes}">
+                              <i class="fa fa-cloud-download" aria-hidden="true"></i>
+                              Download the latest release notes
+                          </a>
+                      </p>
+                      <p>
+                      Errata for OpenStax Tutor and Concept Coach are updated at the end of each semester.
+                      </p>
+                      Have questions?  Please email <a href="mailto:errata@openstax.org">errata@openstax.org</a>
+                  </div>
             </div>
         </div>
     </div>
