--- a/src/app/pages/confirmation/confirmation.html
+++ b/src/app/pages/confirmation/confirmation.html
@@ -18,7 +18,7 @@
 
     <div class="wrapper">
         <savings-calculator class="boxed" skip="true"></savings-calculator>
-        <detail-block skip="true"></detail-block>
+        <detail-block class="boxed" skip="true"></detail-block>
         <div class="text-content labeled-inputs row book-info">
         </div>
     </div>
