--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -283,6 +283,7 @@ sup {
 @import 'components/forms';
 @import 'components/headers';
 @import 'components/hero';
+@import 'components/radio-buttons';
 @import 'components/responsive';
 @import 'components/social';
 @import 'components/strips';
