--- a/src/app/pages/confirmation/confirmation.scss
+++ b/src/app/pages/confirmation/confirmation.scss
@@ -109,5 +109,6 @@ $page-background: #fbfbfb;
     .wrapper {
         background-color: $page-background;
         min-height: 13rem;
+        padding-top: 2rem;
     }
 }
