Use default email address
Remove email address field from errata form

--- a/src/app/pages/confirmation/confirmation.html
+++ b/src/app/pages/confirmation/confirmation.html
@@ -7,7 +7,11 @@
                 <p if="model.topLinkUrl">
                     {' '}<a href="{model.topLinkUrl}">{model.topLinkText}</a>
                 </p>
-                <p if="model.adoptionQuestion">{model.adoptionQuestion}</p>
+                <p if="model.adoptionQuestion">{model.adoptionQuestion}
+                    <if condition="model.defaultEmail">
+                        {` `}We sent an email to {model.defaultEmail} confirming your submission.
+                    </if>
+                </p>
                 <a if="model.adoptionUrl" href="{model.adoptionUrl}" title="{model.adoptionLinkText}" class="cta btn">{model.adoptionLinkText}</a>
                 <a if="model.subjectLinkText"
                     href="/subjects" title="{model.subjectLinkText}" class="go-back">{model.subjectLinkText}</a>
