--- a/src/app/pages/errata/form/form.html
+++ b/src/app/pages/errata/form/form.html
@@ -61,9 +61,8 @@
             <span if="model.file2" class="file-name">{model.file2}</span>
         </div>
         <div class="question">
-            If you would like to receive email notifications about updates to this
-            errata entry, include your email address here.
-            <input type="text" name="submitter_email_address" value="{model.defaultEmail}" />
+            Email notifications about updates to this
+            errata entry will be sent to {model.defaultEmail}.
         </div>
         <div>
             <input type="submit" class="btn" value="Submit" />
