--- a/src/app/components/share/share.html
+++ b/src/app/components/share/share.html
@@ -2,17 +2,20 @@
     <div class="buttons">
         <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/"
          data-layout="link" data-mobile-iframe="true">
-             <a class="fb-xfbml-parse-ignore facebook btn" target="_blank"
+            <a class="fb-xfbml-parse-ignore facebook btn" target="_blank"
               href="https://www.facebook.com/sharer/sharer.php?u={model.pageUrl}&src=share_button&sdk=joey&display=popup&app_id=">
-              Facebook
-          </a>
-      </div>
+                  <i class="social-icon fa fa-facebook-official"></i>
+                  Facebook
+              </a>
+        </div>
         <a href="https://twitter.com/intent/tweet?text={model.message}&url={model.pageUrl}"
          class="twitter twitter-share-button btn">
+            <i class="social-icon fa fa-twitter"></i>
             Twitter
         </a>
         <a class="linkedin btn"
          href="https://www.linkedin.com/shareArticle?url={model.pageUrl}&mini=true&source=OpenStax&title={model.message}">
+            <i class="social-icon fa fa-linkedin-square" src=""></i>
             LinkedIn
         </a>
     </div>
